[package]
name = "solana-hello-world"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.3.1"
borsh-derive = "1.3.1"
solana-program = "=1.18.8"

[dev-dependencies]
solana-program-test = "~1.18.8"
solana-sdk = "1.18.8"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
